syntax = "proto3";

package go.micro.srv.users;

service Users {
	rpc Create(CreateRequest) returns (CreateResponse) {}
	rpc Read(ReadRequest) returns (ReadResponse) {}
	rpc Update(UpdateRequest) returns (UpdateResponse) {}
	rpc Delete(DeleteRequest) returns (DeleteResponse) {}
	rpc Search(SearchRequest) returns (SearchResponse) {}
}


enum EventType {
	Unknown = 0;
	UserCreated = 1;
	UserUpdated = 2;
	UserDeleted = 3;
}

message Event {
	EventType type = 1;
	User user = 2;
}

message User {
	string id = 1;					// uuid
	int64 created = 2;			// unix
	int64 updated = 3;			// unix
	string first_name = 4;
	string last_name = 5;
	string email = 6;
	map<string, string> metadata = 8;
	string profile_picture_url = 9;
	bool invite_verified = 10;
}

message CreateRequest {
	User user = 1;
	bool validate_only = 2;
}

message CreateResponse {
	User user = 1;
}

message DeleteRequest {
	string id = 1;
}

message DeleteResponse {
}

message ReadRequest {
	string id = 1;
	string email = 2;
	repeated string ids = 3;
}

message ReadResponse {
	User user = 1;
	repeated User users = 2;
}

message UpdateRequest {
	User user = 1;
}

message UpdateResponse {
	User user = 1;
}

message SearchRequest {
	string query = 1; 
}

message SearchResponse {
	repeated User users = 1;
}